[package]
name = "minesweeper-td"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = "0.8.1"
bevy_rapier2d = "0.16.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bevy_prototype_lyon = "0.6.0"